nav buttons added

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,6 +5,7 @@
   align-items: center;
   height: 100vh;
   border-top: solid;
+  border-color: grey;
   flex-wrap: wrap;
   margin: 0 0 60px;
   a{
