--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -38,10 +38,10 @@
       <% end %>
     <% end %>
     <% if @current_user_borrows_or_lends %>
-      <%= render 'shared/index_loans', loans: @loans %>
-      <%= render 'shared/loans_index', users: @users %>
+      <div id="innerlink"><%= render 'shared/index_loans', loans: @loans %></div>
+      <div id="friends"><%= render 'shared/loans_index', users: @users %></div>
       <%= render 'shared/new_loan_mesg', loans: @loans %>
-      <%= render 'shared/mapbox', loans: @loans %>
+      <div id="map"><%= render 'shared/mapbox', loans: @loans %></div>
     <% end %>
 <br>
 <br>
