--- a/app/assets/stylesheets/components/_card_loan.scss
+++ b/app/assets/stylesheets/components/_card_loan.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   border-top: solid;
+  border-color: grey;
   // flex-wrap: wrap;
   gap: 20px;
   width: 100%;
