--- a/app/views/shared/_index_loans.html.erb
+++ b/app/views/shared/_index_loans.html.erb
@@ -7,13 +7,6 @@
             <% if loan.item.user == current_user %>
               <div class="card-lending" data-modal-target="loan" data-id= "<%= loan.id %>">
                 <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %>
-                  <%# <button class="review-btn submit-btns">Mark as Returned</button>
-                  <div id="myModal" class="modal" data-controller="review">
-                    <div class="modal-content">
-                      <span class="close">&times;</span>
-                      <%= render 'shared/new_review', loan: loan %>
-                    <%# </div>
-                  </div>  %>
                 </div>
                 <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
                 <div class="loan-card-item-info">
@@ -21,10 +14,16 @@
                   <p><%="🎯 #{loan.return_date}" %></p>
                   <p><%= "📝 #{loan.item.description}" %></p>
                   <div title="Mark as returned" >
-                    <%# <%= link_to '✅', loan_path(loan), method: :delete, class: 'text-decoration-none'%>
                       <button class='return-btn' data-action="click->modal#alert" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">
                       ✅</button>
                     </div>
+                  <button class="review-btn btn" title="Give a review">Give a review</button>
+                  <div id="myModal" class="modal" data-controller="review">
+                    <div class="modal-content">
+                      <span class="close">&times;</span>
+                      <%= render 'shared/new_review', loan: loan %>
+                    </div>
+                  </div>
                 </div>
                 <div class="loan-card-item-info-actions">
                   <%='💌'%>
@@ -41,13 +40,13 @@
             <% else %>
               <div class="card-borrowing">
                 <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %>
-                <%# <button class="review-btn submit-btns">Mark as Returned</button>
-                <div id="myModal" class="modal">
-                  <div class="modal-content">
-                    <span class="close">&times;</span>
-                    <%= render 'shared/new_review', loan: loan %>
-                  <%# </div>
-                </div> %>
+                <button class="review-btn btn" title="Give a review">Give a review</button>
+                    <div id="myModal" class="modal" data-controller="review">
+                      <div class="modal-content">
+                        <span class="close">&times;</span>
+                        <%= render 'shared/new_review', loan: loan %>
+                      </div>
+                    </div>
                 </div>
                 <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
                 <div class="loan-card-item-info">
@@ -73,7 +72,8 @@
           <div class="card-odd">
             <% if loan.item.user == current_user %>
               <div class="card-lending" data-modal-target="loan" data-id= "<%= loan.id %>">
-                <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn submit-btns">Mark as Returned</button>
+                <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn btn" title="Give a review">Give a review</button>
+
                                                                                         <div id="myModal" class="modal">
                                                                                           <div class="modal-content">
                                                                                             <span class="close">&times;</span>
@@ -91,6 +91,13 @@
                       <button class='return-btn' data-action="click->modal#alert" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">
                       ✅</button>
                     </div>
+                     <button class="review-btn btn" title="Give a review">Give a review</button>
+                    <div id="myModal" class="modal" data-controller="review">
+                      <div class="modal-content">
+                        <span class="close">&times;</span>
+                        <%= render 'shared/new_review', loan: loan %>
+                      </div>
+                    </div>
                 </div>
                 <div class="loan-card-item-info-actions">
                   <%='💌'%>
@@ -106,8 +113,8 @@
               </div>
             <% else %>
               <div class="card-borrowing">
-                <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn submit-btns">Mark as Returned</button>
-                                                                                        <div id="myModal" class="modal">
+                <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn btn" title="Give a review">Give a review</button>
+                                                                                         <div id="myModal" class="modal">
                                                                                           <div class="modal-content">
                                                                                             <span class="close">&times;</span>
                                                                                             <%= render 'shared/new_review', loan: loan %>
