modal to accept

--- a/app/views/shared/_index_loans.html.erb
+++ b/app/views/shared/_index_loans.html.erb
@@ -38,24 +38,16 @@
                   </div>
                   <%= link_to '💌', user_path(loan.user), class: 'return-btn'%>
                   <% if loan.status == 'pending' %>
-                  <div title="Accept loan" >
-                      <button class='return-btn' data-modal-target='accept' data-action="click->modal#confirm" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">
+                    <div title="Accept loan" >
+                      <button class='return-btn' data-modal-target='accept' data-action="click->modal#confirm" data-user_id="<%= loan.user %>" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">
                       ？</button>
                     </div>
-                  <%# <%= link_to '？', loan_mark_path(loan), method: :patch %> %>
                   <% end %>
                 </div>
               </div>
             <% else %>
               <div class="card-borrowing">
                 <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %>
-                <button class="review-btn" title="Give a review">⭐️</button>
-                    <div id="myModal" class="modal" data-controller="review">
-                      <div class="modal-content">
-                        <span class="close">&times;</span>
-                        <%= render 'shared/new_review', loan: loan %>
-                      </div>
-                    </div>
                 </div>
                 <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
                 <div class="loan-card-item-info">
@@ -75,7 +67,6 @@
                 </div>
                 <div class="loan-card-item-info-actions d-flex justify-content-between p-5">
                   <%= link_to '💌', user_path(loan.user), class: 'return-btn'%>
-                  <%# <%= link_to '🔄', loan_mark_path(loan), method: :patch %> %>
                 </div>
               </div>
             <% end %>
@@ -84,14 +75,7 @@
           <div class="card-odd">
             <% if loan.item.user == current_user %>
               <div class="card-lending" data-modal-target="loan" data-id= "<%= loan.id %>">
-                <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn" title="Give a review">⭐️</button>
-
-                                                                                        <div id="myModal" class="modal">
-                                                                                          <div class="modal-content">
-                                                                                            <span class="close">&times;</span>
-                                                                                            <%= render 'shared/new_review', loan: loan %>
-                                                                                          </div>
-                                                                                        </div>
+                <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %>
                 </div>
                 <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
                 <div class="loan-card-item-info">
@@ -111,7 +95,6 @@
                 </div>
                 <div class="loan-card-item-info-actions d-flex justify-content-between p-5">
                   <div title="Mark as returned" >
-                    <%# <%= link_to '✅', loan_path(loan), method: :delete, class: 'text-decoration-none'%>
                       <button class='return-btn' data-action="click->modal#alert" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">
                       ✅</button>
                     </div>
@@ -123,18 +106,17 @@
                       </div>
                     </div>
                   <%= link_to '💌', user_path(loan.user), class: 'return-btn'%>
-                  <%# <%= link_to '🔄', loan_mark_path(loan), method: :patch %>
+                  <% if loan.status == 'pending' %>
+                    <div title="Accept loan" >
+                        <button class='return-btn' data-modal-target='accept' data-action="click->modal#confirm" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">
+                        ？</button>
+                    </div>
+                  <% end %>
                 </div>
               </div>
             <% else %>
               <div class="card-borrowing">
-                <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn" title="Give a review">⭐️</button>
-                                                                                         <div id="myModal" class="modal">
-                                                                                          <div class="modal-content">
-                                                                                            <span class="close">&times;</span>
-                                                                                            <%= render 'shared/new_review', loan: loan %>
-                                                                                          </div>
-                                                                                        </div>
+                <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %>
                 </div>
                 <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
                 <div class="loan-card-item-info">
@@ -150,12 +132,10 @@
                     <% else %>
                       <%= '😒' %>
                     <% end %>
+                  </div>
                 </div>
                 <div class="loan-card-item-info-actions d-flex justify-content-between p-5">
                   <%= link_to '💌', user_path(loan.user), class: 'return-btn'%>
-                  <%# <%= link_to '🔄', loan_mark_path(loan), method: :patch %> %>
-                  <p><%=  %>
-                  </div>
                 </div>
               </div>
             <% end %>
