--- a/app/views/shared/_index_loans.html.erb
+++ b/app/views/shared/_index_loans.html.erb
@@ -17,18 +17,14 @@
                   <div class='review'>
                     <% if loan.user.reviews.length >= 2 %>
                       <%= '🌟' %>
-                    <% elsif loan.user.reviews.length == 1 %>
+                    <% elsif loan.user.reviews.length >= 0 %>
                       <%= '⭐' %>
                     <% else %>
-                      <%= '😒' %>
+                      <%= 'No rating yet 😒' %>
                     <% end %>
                   </div>
                 </div>
                 <div class="loan-card-item-info-actions d-flex justify-content-between p-5">
-                  <div title="Mark as returned" >
-                      <button class='return-btn' data-action="click->modal#alert" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">
-                      ✅</button>
-                    </div>
                   <button class="review-btn" title="Give a review">⭐️</button>
                   <div id="myModal" class="modal" data-controller="review">
                     <div class="modal-content">
@@ -39,8 +35,13 @@
                   <%= link_to '💌', user_path(loan.user), class: 'return-btn'%>
                   <% if loan.status == 'pending' %>
                     <div title="Accept loan" >
-                      <button class='return-btn' data-modal-target='accept' data-action="click->modal#confirm" data-user_id="<%= loan.user %>" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">
+                      <button class='return-btn' data-modal-target='accept' data-action="click->modal#confirm" data-user_id="<%= loan.user %>" data-id= "<%= loan.id %>">
                       ？</button>
+                    </div>
+                  <% else %>
+                    <div title="Mark as returned" >
+                      <button class='return-btn' data-action="click->modal#alert" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">
+                      ✅</button>
                     </div>
                   <% end %>
                 </div>
@@ -58,14 +59,14 @@
                   <div class='review'>
                     <% if loan.user.reviews.length >= 2 %>
                       <%= '🌟' %>
-                    <% elsif loan.user.reviews.length == 1 %>
+                    <% elsif loan.user.reviews.length >= 0 %>
                       <%= '⭐' %>
                     <% else %>
-                      <%= '😒' %>
+                      <%= 'No rating yet 😒' %>
                     <% end %>
                   </div>
                 </div>
-                <div class="loan-card-item-info-actions d-flex justify-content-between p-5">
+                <div class="loan-card-item-info-actions d-flex justify-content-center p-5">
                   <%= link_to '💌', user_path(loan.user), class: 'return-btn'%>
                 </div>
               </div>
@@ -86,18 +87,14 @@
                   <div class='review'>
                     <% if loan.user.reviews.length >= 2 %>
                       <%= '🌟' %>
-                    <% elsif loan.user.reviews.length == 1 %>
+                    <% elsif loan.user.reviews.length >= 0 %>
                       <%= '⭐' %>
                     <% else %>
-                      <%= '😒' %>
+                      <%= 'No rating yet 😒' %>
                     <% end %>
                   </div>
                 </div>
                 <div class="loan-card-item-info-actions d-flex justify-content-between p-5">
-                  <div title="Mark as returned" >
-                      <button class='return-btn' data-action="click->modal#alert" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">
-                      ✅</button>
-                    </div>
                      <button class="review-btn" title="Give a review">⭐️</button>
                     <div id="myModal" class="modal" data-controller="review">
                       <div class="modal-content">
@@ -110,6 +107,11 @@
                     <div title="Accept loan" >
                         <button class='return-btn' data-modal-target='accept' data-action="click->modal#confirm" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">
                         ？</button>
+                    </div>
+                  <% else %>
+                    <div title="Mark as returned" >
+                      <button class='return-btn' data-action="click->modal#alert" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">
+                      ✅</button>
                     </div>
                   <% end %>
                 </div>
@@ -127,14 +129,14 @@
                   <div class='review'>
                     <% if loan.user.reviews.length >= 2 %>
                       <%= '🌟' %>
-                    <% elsif loan.user.reviews.length == 1 %>
+                    <% elsif loan.user.reviews.length >= 0 %>
                       <%= '⭐' %>
                     <% else %>
-                      <%= '😒' %>
+                      <%= 'No rating yet 😒' %>
                     <% end %>
                   </div>
                 </div>
-                <div class="loan-card-item-info-actions d-flex justify-content-between p-5">
+                <div class="loan-card-item-info-actions d-flex justify-content-center p-5">
                   <%= link_to '💌', user_path(loan.user), class: 'return-btn'%>
                 </div>
               </div>
