correct map markers now displaying

--- a/app/views/shared/_index_loans.html.erb
+++ b/app/views/shared/_index_loans.html.erb
@@ -13,6 +13,7 @@
                   <p><%= "👤 Lent to #{loan.user.first_name}" %></p>
                   <p><%="🎯 #{loan.return_date}" %></p>
                   <p><%= "📝 #{loan.item.description}" %></p>
+                  <p><%="🎯 #{loan.status}" %></p>
                   <p>Rating:</p>
                   <div class='review'>
                     <% if loan.user.reviews.length >= 2 %>
@@ -62,6 +63,7 @@
                   <p><%="👤 Borrowed from #{loan.item.user.first_name}" %></p>
                   <p><%="🎯 #{loan.return_date}" %></p>
                   <p><%= "📝 #{loan.item.description}" %></p>
+                  <p><%="🎯 #{loan.status}" %></p>
                   <p>Rating:</p>
                   <div class='review'>
                     <% if loan.user.reviews.length >= 2 %>
@@ -98,6 +100,7 @@
                   <p><%= "👤 Lent to #{loan.user.first_name}" %></p>
                   <p><%="🎯 #{loan.return_date}" %></p>
                   <p><%= "📝 #{loan.item.description}" %></p>
+                  <p><%="🎯 #{loan.status}" %></p>
                   <p>Rating:</p>
                   <div class='review'>
                     <% if loan.user.reviews.length >= 2 %>
@@ -141,6 +144,7 @@
                   <p><%="👤 Borrowed from #{loan.item.user.first_name}" %></p>
                   <p><%="🎯 #{loan.return_date}" %></p>
                   <p><%= "📝 #{loan.item.description}" %></p>
+                  <p><%="🎯 #{loan.status}" %></p>
                   <p>Rating:</p>
                   <div class='review'>
                     <% if loan.user.reviews.length >= 2 %>
