--- a/app/assets/stylesheets/components/_mapbox.scss
+++ b/app/assets/stylesheets/components/_mapbox.scss
@@ -11,4 +11,8 @@
 .mapboxgl-popup-content {
   text-align: center;
   font-family: "Open Sans", sans-serif;
+  p {
+    font-family: "Oswald", sans-serif !important;
+    padding: 0px !important;
+  }
 }
