--- a/app/views/pages/_info_window.html.erb
+++ b/app/views/pages/_info_window.html.erb
@@ -1,10 +1,8 @@
+<h3><%= link_to user.first_name, user_path(user) %></h3>
 <div class="mapboxgl-popup mapboxgl-popup-content">
-  <h3><%= user.first_name %></h3>
-    <ul>
-      <% @loans.each do |loan| %>
-        <% if user == loan.user && loan.item.user == current_user && loan.status == 'accepted' %>
-          <li><%= loan.item.item_name %></li>
-          <% end %>
+    <% @loans.each do |loan| %>
+      <% if user == loan.user && loan.item.user == current_user && loan.status == 'accepted' %>
+        <p><%= loan.item.item_name %></p>
         <% end %>
-  </ul>
+      <% end %>
 </div>
