--- a/app/assets/stylesheets/components/_btns.scss
+++ b/app/assets/stylesheets/components/_btns.scss
@@ -10,7 +10,7 @@
 
 .borrow-btns:hover {
   color: rgba($color: #000000, $alpha: 0.8)!important;
-  background-color: rgba(219,231,228,0.7)!important;
+  background-color: $borrowing!important;
   // background-color: rgba($color: #ffffff, $alpha: 0.7)
 }
 
@@ -36,7 +36,7 @@
 
 .lend-btns:hover {
   color: rgba($color: #000000, $alpha: 0.8)!important;
-  background-color: rgba(255,93,143,0.7)!important;
+  background-color: $lending!important;
   // background-color: rgba($color: #ffffff, $alpha: 0.9)!important;
 }
 
