--- a/app/assets/stylesheets/components/_card_loan.scss
+++ b/app/assets/stylesheets/components/_card_loan.scss
@@ -46,12 +46,12 @@
 
   .card-lending{
     // border: solid 20px #465c9c7e;
-    background-color: rgba(255,93,143,0.5);
+    background-color: $lending;
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
     border-radius: 5px;
    }
   .card-borrowing{
-    background-color: rgba(219,231,228,0.5);
+    background-color: $borrowing;
     border-radius: 5px;
     // border: solid 20px #f5d64e7e;
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
