--- a/app/views/shared/_index_loans.html.erb
+++ b/app/views/shared/_index_loans.html.erb
@@ -1,164 +1,29 @@
 <div class="dashboard-container">
   <div class="loan-index" data-controller='modal'>
-    <% loans.each do |loan| %>
+    <% lendings = user_lendings(current_user) %>
+    <% lendings.each do |loan| %>
       <% unless loan.status == 'returned' %>
         <% if loan.id % 2 == 0  %>
           <div class="card-even">
-            <% if loan.item.user == current_user %>
-              <div class="card-lending" data-modal-target="loan" data-id= "<%= loan.id %>">
-                <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %>
-                </div>
-                <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
-                <div class="loan-card-item-info">
-                  <p><%= "👤 Lent to #{loan.user.first_name}" %></p>
-                  <p><%="🎯 #{loan.return_date}" %></p>
-                  <p><%= "📝 #{loan.item.description}" %></p>
-                  <p>Rating:</p>
-                  <div class='review'>
-                    <% if loan.user.reviews.length >= 2 %>
-                      <%= '🌟' %>
-                    <% elsif loan.user.reviews.length == 1 %>
-                      <%= '⭐' %>
-                    <% else %>
-                      <%= '😒' %>
-                    <% end %>
-                  </div>
-                </div>
-                <div class="loan-card-item-info-actions d-flex justify-content-between p-5">
-                  <div title="Mark as returned" >
-                      <button class='return-btn' data-action="click->modal#alert" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">
-                      ✅</button>
-                    </div>
-                  <button class="review-btn" title="Give a review">⭐️</button>
-                  <div id="myModal" class="modal" data-controller="review">
-                    <div class="modal-content">
-                      <span class="close">&times;</span>
-                      <%= render 'shared/new_review', loan: loan %>
-                    </div>
-                  </div>
-                  <%= link_to '💌', user_path(loan.user), class: 'return-btn'%>
-                  <% if loan.status == 'pending' %>
-                  <div title="Accept loan" >
-                      <button class='return-btn' data-modal-target='accept' data-action="click->modal#confirm" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">
-                      ？</button>
-                    </div>
-                  <%# <%= link_to '？', loan_mark_path(loan), method: :patch %> %>
-                  <% end %>
-                </div>
-              </div>
-            <% else %>
-              <div class="card-borrowing">
-                <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %>
-                <button class="review-btn" title="Give a review">⭐️</button>
-                    <div id="myModal" class="modal" data-controller="review">
-                      <div class="modal-content">
-                        <span class="close">&times;</span>
-                        <%= render 'shared/new_review', loan: loan %>
-                      </div>
-                    </div>
-                </div>
-                <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
-                <div class="loan-card-item-info">
-                  <p><%="👤 Borrowed from #{loan.item.user.first_name}" %></p>
-                  <p><%="🎯 #{loan.return_date}" %></p>
-                  <p><%= "📝 #{loan.item.description}" %></p>
-                  <p>Rating:</p>
-                  <div class='review'>
-                    <% if loan.user.reviews.length >= 2 %>
-                      <%= '🌟' %>
-                    <% elsif loan.user.reviews.length == 1 %>
-                      <%= '⭐' %>
-                    <% else %>
-                      <%= '😒' %>
-                    <% end %>
-                  </div>
-                </div>
-                <div class="loan-card-item-info-actions d-flex justify-content-between p-5">
-                  <%= link_to '💌', user_path(loan.user), class: 'return-btn'%>
-                  <%# <%= link_to '🔄', loan_mark_path(loan), method: :patch %> %>
-                </div>
-              </div>
-            <% end %>
+            <%= render '/shared/card_lending', loan: loan %>
           </div>
         <% else %>
           <div class="card-odd">
-            <% if loan.item.user == current_user %>
-              <div class="card-lending" data-modal-target="loan" data-id= "<%= loan.id %>">
-                <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn" title="Give a review">⭐️</button>
-
-                                                                                        <div id="myModal" class="modal">
-                                                                                          <div class="modal-content">
-                                                                                            <span class="close">&times;</span>
-                                                                                            <%= render 'shared/new_review', loan: loan %>
-                                                                                          </div>
-                                                                                        </div>
-                </div>
-                <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
-                <div class="loan-card-item-info">
-                  <p><%= "👤 Lent to #{loan.user.first_name}" %></p>
-                  <p><%="🎯 #{loan.return_date}" %></p>
-                  <p><%= "📝 #{loan.item.description}" %></p>
-                  <p>Rating:</p>
-                  <div class='review'>
-                    <% if loan.user.reviews.length >= 2 %>
-                      <%= '🌟' %>
-                    <% elsif loan.user.reviews.length == 1 %>
-                      <%= '⭐' %>
-                    <% else %>
-                      <%= '😒' %>
-                    <% end %>
-                  </div>
-                </div>
-                <div class="loan-card-item-info-actions d-flex justify-content-between p-5">
-                  <div title="Mark as returned" >
-                    <%# <%= link_to '✅', loan_path(loan), method: :delete, class: 'text-decoration-none'%>
-                      <button class='return-btn' data-action="click->modal#alert" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">
-                      ✅</button>
-                    </div>
-                     <button class="review-btn" title="Give a review">⭐️</button>
-                    <div id="myModal" class="modal" data-controller="review">
-                      <div class="modal-content">
-                        <span class="close">&times;</span>
-                        <%= render 'shared/new_review', loan: loan %>
-                      </div>
-                    </div>
-                  <%= link_to '💌', user_path(loan.user), class: 'return-btn'%>
-                  <%# <%= link_to '🔄', loan_mark_path(loan), method: :patch %>
-                </div>
-              </div>
-            <% else %>
-              <div class="card-borrowing">
-                <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn" title="Give a review">⭐️</button>
-                                                                                         <div id="myModal" class="modal">
-                                                                                          <div class="modal-content">
-                                                                                            <span class="close">&times;</span>
-                                                                                            <%= render 'shared/new_review', loan: loan %>
-                                                                                          </div>
-                                                                                        </div>
-                </div>
-                <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
-                <div class="loan-card-item-info">
-                  <p><%="👤 Borrowed from #{loan.item.user.first_name}" %></p>
-                  <p><%="🎯 #{loan.return_date}" %></p>
-                  <p><%= "📝 #{loan.item.description}" %></p>
-                  <p>Rating:</p>
-                  <div class='review'>
-                    <% if loan.user.reviews.length >= 2 %>
-                      <%= '🌟' %>
-                    <% elsif loan.user.reviews.length == 1 %>
-                      <%= '⭐' %>
-                    <% else %>
-                      <%= '😒' %>
-                    <% end %>
-                </div>
-                <div class="loan-card-item-info-actions d-flex justify-content-between p-5">
-                  <%= link_to '💌', user_path(loan.user), class: 'return-btn'%>
-                  <%# <%= link_to '🔄', loan_mark_path(loan), method: :patch %> %>
-                  <p><%=  %>
-                  </div>
-                </div>
-              </div>
-            <% end %>
+            <%= render '/shared/card_lending', loan: loan %>
+          </div>
+        <% end %>
+      <% end %>
+    <% end %>
+    <% borrowings = user_borrowings(current_user) %>
+    <% borrowings.each do |loan| %>
+      <% unless loan.status == 'returned' %>
+        <% if loan.id % 2 == 0 %>
+          <div class="card-even">
+            <%= render '/shared/card_borrowing', loan: loan %>
+          </div>
+        <% else %>
+          <div class="card-odd">
+            <%= render '/shared/card_borrowing', loan: loan %>
           </div>
         <% end %>
       <% end %>
