--- a/app/assets/stylesheets/components/_review.scss
+++ b/app/assets/stylesheets/components/_review.scss
@@ -16,11 +16,11 @@
   background-color: #fefefe;
   margin: auto;
   padding: 15px;
-  margin-top: 10%;
+  margin-top: 8%;
   box-shadow: 5px 5px 23px 5px rgba(0,0,0,0.63);  /* border: 1px solid #888; */
   width: 40%;
   border-radius: 5px;
-  height: 540px;
+  height: 650px;
   p {
     font-size: 18px;
   }
@@ -80,4 +80,9 @@
   margin: 20px 10px;
   padding: 4px;
   border-radius: 5px;
+}
+
+.simple_form .collection_radio_buttons {
+  padding: 10px;
+
 }
