--- a/app/views/shared/_card_lending.html.erb
+++ b/app/views/shared/_card_lending.html.erb
@@ -8,7 +8,6 @@
     <p><%= "Rating:  #{rating(loan)}"%></p>
   </div>
   <div class="loan-card-item-info-actions d-flex justify-content-center p-5">
-    <button title="Mark as returned" class='return-btn' data-action="click->modal#alert" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">✅</button>
     <button class="review-btn" title="Give a review">⭐️</button>
     <div id="myModal" class="modal" data-controller="review">
       <div class="modal-content">
@@ -19,7 +18,8 @@
     <%= link_to '💌', user_path(loan.user), class: 'return-btn'%>
     <% if loan.status == 'pending' %>
       <button title="Accept loan" class='return-btn' data-modal-target='accept' data-action="click->modal#confirm" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">？</button>
-      <%# <%= link_to '？', loan_mark_path(loan), method: :patch %>
+    <% else %>
+      <button title="Mark as returned" class='return-btn' data-action="click->modal#alert" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">✅</button>
     <% end %>
   </div>
 </div>
