still not working

--- a/app/assets/stylesheets/components/_card_loan.scss
+++ b/app/assets/stylesheets/components/_card_loan.scss
@@ -42,6 +42,7 @@
   .loan-card-item-info-actions{
     font-size: 30px;
     padding: 0 0 30px;
+    background-color: white;
   }
 
   .card-lending{
