--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,4 +1,4 @@
-  <div class="container">
+  <div class="review-container">
 
     <div class="form-container text-center">
     <h2>Leave a review:</h2>
