--- a/app/assets/stylesheets/components/_review.scss
+++ b/app/assets/stylesheets/components/_review.scss
@@ -73,16 +73,22 @@
   height: 400px;
 }
 
-.simple_form select {
-  width: 76px;
-  font-size: 18px;
-  text-align: center;
-  margin: 20px 10px;
-  padding: 4px;
-  border-radius: 5px;
+.review-container {
+
+  .simple_form select {
+    width: 76px;
+    font-size: 18px;
+    text-align: center;
+    margin: 20px 10px;
+    padding: 4px;
+    border-radius: 5px;
+  }
 }
 
-.simple_form .collection_radio_buttons {
-  padding: 10px;
+.review-container{
+  .simple_form .collection_radio_buttons {
+    padding: 10px;
+  }
+
 
 }
