--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -4,10 +4,17 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  border-top: solid;
-  border-color: grey;
+  // margin: 0 0 60px;
+  margin: 0 auto;
+  margin-top: 50px;
+  display: flex;
+  height: 100%;
+  justify-content: space-between;
   flex-wrap: wrap;
-  margin: 0 0 60px;
+  padding: 40px;
+  // margin-top: 100px;
+  background: rgb(255,255,255);
+  border-radius: 10px;
   a{
     text-decoration: none;
   }
