--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,8 +1,12 @@
 .dashboard-container {
   margin: 0 auto;
+  margin-top: 50px;
   display: flex;
+  height: 100%;
   justify-content: space-between;
   flex-wrap: wrap;
+  padding: 40px;
   // margin-top: 100px;
-  // background-color: $green;
+  background: rgb(255,255,255);
+  background: linear-gradient(128deg, rgba(255,255,255,1) 0%, rgba(236,236,236,1) 100%);
 }
