--- a/app/views/shared/_card_lending.html.erb
+++ b/app/views/shared/_card_lending.html.erb
@@ -19,7 +19,7 @@
     <% if loan.status == 'pending' %>
       <button title="Accept loan" class='return-btn' data-modal-target='accept' data-action="click->modal#confirm" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">？</button>
     <% else %>
-      <button title="Mark as returned" class='return-btn' data-action="click->modal#alert" data-id= "<%= loan.id%>  data-user_id="<%= loan.user %>">✅</button>
+      <button title="Mark as returned" class='return-btn' data-action="click->modal#alert" data-id= "<%= loan.id%>"  data-user_id="<%= loan.user %>">✅</button>
     <% end %>
   </div>
 </div>
