--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -7,6 +7,6 @@
   flex-wrap: wrap;
   padding: 40px;
   // margin-top: 100px;
-  background: rgb(255,255,255);
-  background: linear-gradient(128deg, rgba(255,255,255,1) 0%, rgba(236,236,236,1) 100%);
+  // background: rgb(255,255,255);
+  // background: linear-gradient(128deg, rgba(255,255,255,1) 0%, rgba(236,236,236,1) 100%);
 }
