--- a/app/assets/stylesheets/components/_card_loan.scss
+++ b/app/assets/stylesheets/components/_card_loan.scss
@@ -31,6 +31,7 @@
     border-radius: 5px;
     img{
       border-radius: 5px;
+      object-fit: cover;
       overflow: hidden;
       height: 100%;
       width: 100%;
@@ -38,6 +39,12 @@
       justify-content: center;
       clip-path: polygon(0 0, 252% 0, 119% 103%, 0 80%);
     }
+  }
+
+  .loan-card-item-info{
+    text-align: left;
+    font-size: 28px;
+    padding: 0 30px 20px;
   }
   .loan-card-item-info-actions{
     font-size: 30px;
@@ -50,7 +57,9 @@
     background-color: $lending;
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
     border-radius: 5px;
-   }
+
+  }
+
   .card-borrowing{
     background-color: $borrowing;
     border-radius: 5px;
@@ -58,5 +67,11 @@
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
     // position: relative;
   }
+  .card-lending-hovering{
 
+    opacity: 0%;
+    &:hover{
+      opacity: 100%;
+    }
+  }
 }
