--- a/app/assets/stylesheets/components/_review.scss
+++ b/app/assets/stylesheets/components/_review.scss
@@ -89,6 +89,16 @@
   .simple_form .collection_radio_buttons {
     padding: 10px;
   }
+}
 
-
+.review-summary {
+  background-color: white;
+  border-radius: 5px;
+  width: auto;
+  height: auto;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  padding: 20px;
+  margin-top: 313px;
 }
