returned, accept and form dropwown

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -13,8 +13,8 @@
   flex-wrap: wrap;
   padding: 40px;
   // margin-top: 100px;
-  background: rgb(255,255,255);
-  border-radius: 10px;
+  // background: rgb(255,255,255);
+  // border-radius: 10px;
   a{
     text-decoration: none;
   }
