--- a/app/assets/stylesheets/components/_card_loan.scss
+++ b/app/assets/stylesheets/components/_card_loan.scss
@@ -1,12 +1,12 @@
 .loan-index{
   display: flex;
-  justify-content: space-between;
+  justify-content: center!important;
   align-items: center;
-  border-top: solid;
+  // border-top: solid;
   flex-wrap: wrap;
   // border-color: grey;
   // flex-wrap: wrap;
-  gap: 20px;
+  gap: 30px!important;
   width: 100%;
   height: 100%;
   margin: 20px 20px 20px;
