--- a/app/assets/stylesheets/components/_card_loan.scss
+++ b/app/assets/stylesheets/components/_card_loan.scss
@@ -2,76 +2,199 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-top: solid;
-  border-color: grey;
-  // flex-wrap: wrap;
   gap: 20px;
   width: 100%;
   height: 100%;
   margin: 20px 20px 20px;
   padding: 20px;
 
-  .card-odd{
+  .card-odd-lending{
     display: block;
-    height: 600px;
+    height: 640px;
     width: 360px;
-    margin:0 0 50px;
+    margin:120px 0 20px;
     border-radius: 5px;
-  }
-  .card-even{
-    display: block;
-    height: 600px;
-    width: 360px;
-    margin:120px 0 50px;
-    border-radius: 5px;
-  }
+    background-color: $lending;
+    position: relative;
+    .card-lending{
+      .loan-card-image{
+        height: 330px;
+        border-radius: 5px;
+        img{
+          border-radius: 5px;
+          object-fit: cover;
+          overflow: hidden;
+          height: 100%;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          clip-path: polygon(0 0, 252% 0, 119% 103%, 0 80%);
+        }
+      }
+      .loan-card-item-info{
+        color: black;
+        font-size: 28px;
+        text-align: left;
+        padding-left: 20px;
+      }
 
-  .loan-card-image{
-    height: 330px;
+      .loan-card-item-info-actions{
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        align-items: flex-start;
+        opacity: 0%;
+        font-size: 28px;
+        border-radius: 5px;
+        &:hover{
+          background-color: rgba(0, 0, 0, 0.33);
+          opacity: 100%;
+          }
+        }
+      }
+    }
+  .card-even-lending{
+    display: block;
+    height: 640px;
+    width: 360px;
+    margin:20px 0 20px;
     border-radius: 5px;
-    img{
-      border-radius: 5px;
-      object-fit: cover;
-      overflow: hidden;
-      height: 100%;
+    background-color: $lending;
+    position: relative;
+    .card-lending{
+      .loan-card-image{
+        height: 330px;
+        border-radius: 5px;
+        img{
+          border-radius: 5px;
+          object-fit: cover;
+          overflow: hidden;
+          height: 100%;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          clip-path: polygon(0 0, 252% 0, 119% 103%, 0 80%);
+        }
+      }
+      .loan-card-item-info{
+        color: black;
+        font-size: 28px;
+        text-align: left;
+        padding-left: 20px;
+      }
+
+    .loan-card-item-info-actions{
+      position: absolute;
+      top: 0;
+      right: 0;
       width: 100%;
-      display: flex;
-      justify-content: center;
-      clip-path: polygon(0 0, 252% 0, 119% 103%, 0 80%);
+      height: 100%;
+      align-items: flex-start;
+      opacity: 0%;
+      font-size: 28px;
+      border-radius: 5px;
+      &:hover{
+        background-color: rgba(0, 0, 0, 0.33);
+        opacity: 100%;
+        }
+      }
     }
   }
 
-  .loan-card-item-info{
-    text-align: left;
-    font-size: 28px;
-    padding: 0 30px 20px;
-  }
-  .loan-card-item-info-actions{
-    font-size: 30px;
-    padding: 0 0 30px;
-    background-color: white;
-  }
-
-  .card-lending{
-    // border: solid 20px #465c9c7e;
-    background-color: $lending;
-    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
+  .card-odd-borrowing{
+    display: block;
+    height: 640px;
+    width: 360px;
+    margin:120px 0 20px;
     border-radius: 5px;
-
-  }
-
-  .card-borrowing{
     background-color: $borrowing;
-    border-radius: 5px;
-    // border: solid 20px #f5d64e7e;
-    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
-    // position: relative;
-  }
-  .card-lending-hovering{
+    position: relative;
+    .card-borrowing{
+      .loan-card-image{
+        height: 330px;
+        border-radius: 5px;
+        img{
+          border-radius: 5px;
+          object-fit: cover;
+          overflow: hidden;
+          height: 100%;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          clip-path: polygon(0 0, 252% 0, 119% 103%, 0 80%);
+        }
+      }
+      .loan-card-item-info{
+        color: black;
+        font-size: 28px;
+        text-align: left;
+        padding-left: 20px;
+      }
 
-    opacity: 0%;
-    &:hover{
-      opacity: 100%;
+      .loan-card-item-info-actions{
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        align-items: flex-start;
+        opacity: 0%;
+        font-size: 28px;
+        border-radius: 5px;
+        &:hover{
+          background-color: rgba(0, 0, 0, 0.33);
+          opacity: 100%;
+          }
+        }
+      }
+    }
+  .card-even-borrowing{
+    display: block;
+    height: 640px;
+    width: 360px;
+    margin:20px 0 20px;
+    border-radius: 5px;
+    background-color: $lending;
+    position: relative;
+    .card-borrowing{
+      .loan-card-image{
+        height: 330px;
+        border-radius: 5px;
+        img{
+          border-radius: 5px;
+          object-fit: cover;
+          overflow: hidden;
+          height: 100%;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          clip-path: polygon(0 0, 252% 0, 119% 103%, 0 80%);
+        }
+      }
+      .loan-card-item-info{
+        color: black;
+        font-size: 28px;
+        text-align: left;
+        padding-left: 20px;
+      }
+
+    .loan-card-item-info-actions{
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      align-items: flex-start;
+      opacity: 0%;
+      font-size: 28px;
+      border-radius: 5px;
+      &:hover{
+        background-color: rgba(0, 0, 0, 0.33);
+        opacity: 100%;
+        }
+      }
     }
   }
 }
