--- a/app/views/shared/_card_borrowing.html.erb
+++ b/app/views/shared/_card_borrowing.html.erb
@@ -6,7 +6,7 @@
     <p><%="🎯 #{loan.return_date}" %></p>
     <p><%= "📝 #{loan.item.description}" %></p>
   </div>
-  <div class="loan-card-item-info-actions d-flex justify-content-center p-5">
+  <div class="loan-card-item-info-actions d-flex justify-content-between p-5">
 
     <button class="review-btn" title="Give a review">
     <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-star" viewBox="0 0 16 16">
