--- a/app/views/shared/_card_lending.html.erb
+++ b/app/views/shared/_card_lending.html.erb
@@ -9,10 +9,10 @@
   </div>
   <div class="loan-card-item-info-actions d-flex justify-content-between p-5" >
     <button class="review-btn" title="Give a review">⭐️</button>
-    <div id="myModal" class="modal" data-controller="review">
+    <div id=<%="myModal-#{loan.id}"%> class="modal" data-modal-target='review'>
       <div class="modal-content">
         <span class="close">&times;</span>
-        <%= render '/shared/new_review', loan: loan %>
+        <%= render '/shared/new_review_lender', loan: loan %>
       </div>
     </div>
     <%= link_to '💌', user_path(loan.user), class: 'return-btn'%>
