--- a/app/views/loans/new.html.erb
+++ b/app/views/loans/new.html.erb
@@ -8,7 +8,7 @@
       <% end %>
       <%= f.input :photo, as: :file %>
       <%# <%= f.association :user, label: "Borrower", label_method: :first_name, value_method: :id, include_blank: false %>
-      <%= f.input :user, collection: User.where.not(id: current_user), label: "Borrower", :label_method => :full_name, value_method: :id, include_blank: false %>
+      <%= f.input :user_id, collection: User.where.not(id: current_user), label: "Borrower", :label_method => :full_name, value_method: :id, include_blank: false %>
       <%= f.input :loan_date %>
       <%= f.input :return_date %>
       <%= f.submit "Let me lend this!", class: "btn submit-btns" %>
